=== HEAD

* Emulate RETURNING on Microsoft SQL Server using OUTPUT, as long as only simple column references are used (jeremyevans)

* Switch class_table_inheritance plugin to use JOIN ON instead of JOIN USING (jeremyevans)

* Qualify primary keys for models with joined datasets when looking up model instances by primary key (jeremyevans)

* Fix qualification of columns when Dataset#graph automatically wraps the initially graphed dataset in a subselect (jeremyevans)

* Make Dataset#joined_dataset? a public method (jeremyevans)

* Allow external jdbc, odbc, and do subadapters to be loaded automatically (jeremyevans)

* Recognize another disconnect error in the jdbc/mysql adapter (jeremyevans)

* Set primary keys correctly for models even if datasets select specific columns (jeremyevans)

* Add dataset_source_alias extension, for automatically aliasing datasets to their first source (jeremyevans)

* Use qualified columns in the lazy_attributes plugin (jeremyevans)

* Add column_select plugin, for using explicit column selections in model datasets (jeremyevans)

* Use associated model's existing selection for join associations if it consists solely of explicitly quailfied columns (jeremyevans)

* Add round_timestamps extension for automatically rounding timestamp values to database precision before literalizing (jeremyevans)

* Make rake default task run plugin specs as well as core/model specs (jeremyevans)

* Use all_tables and all_views for Database#tables and #views on Oracle (jeremyevans)

* Use all_tab_cols instead of user_tab cols for defaults parsing in the oracle adapter (jeremyevans)

* Fix recursive mutex locking issue on JRuby when using Sequel::Model(dataset) (jeremyevans) (#841)

* Make composition and serialization plugins support validations on underlying columns (jeremyevans)

* Fix regression in timestamps and table inheritance plugin where column values would not be saved if validation is skipped (jeremyevans) (#839)
