@@ -1,5 +1,7 @@
 === HEAD
 
+* Calling Dataset#returning when the Database does not support or emulate RETURNING now raises an Error (jeremyevans)
+
 * Emulate RETURNING on Microsoft SQL Server using OUTPUT, as long as only simple column references are used (jeremyevans)
 
 * Switch class_table_inheritance plugin to use JOIN ON instead of JOIN USING (jeremyevans)
